project/k8s/auth-postgres-depl.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
      - name: auth-postgres
        image: postgres
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: auth-postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-service
spec:
  selector:
    app: auth-postgres
  ports:
    - name: auth-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
