project/k8s/cart-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: "alayyubi/cart"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 8080
      targetPort: 8080
