project/k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: "alayyubi/order"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 8080
      targetPort: 8080
