project/k8s/product-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: "alayyubi/product"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 8080
      targetPort: 8080
