project/k8s/rating-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: "alayyubi/rating"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  selector:
    app: rating
  ports:
    - name: rating
      protocol: TCP
      port: 8080
      targetPort: 8080
